system/staging/traefik-forward-auth/ingress-traefik.enc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-traefik
        traefik.ingress.kubernetes.io/router.middlewares: traefik-azuread@kubernetescrd
    name: traefik-forward-auth
spec:
    ingressClassName: traefik
    rules:
        - host: ENC[AES256_GCM,data:u0USFqo47JeTeNPNJsJ2jEBlXrF6vw==,iv:4VoVQ5J7nOz0ovdb2XrQeOvWt4CFnXOoKwWZAPOSBl8=,tag:iOXYcGmpfgArsr5+DANoVw==,type:str]
          http:
            paths:
                - backend:
                    service:
                        name: traefik-forward-auth
                        port:
                            number: 80
                  path: /
                  pathType: ImplementationSpecific
    tls:
        - hosts:
            - ENC[AES256_GCM,data:MG6Wf9gfMC05hXb52/P2MFZFuJkugA==,iv:Z6AnYlxQvNZ/dvRi8PTc+//q3Uc+VH2VtAOJupWZ6ws=,tag:rdCqgYKc2lH2cCIvrtIxoQ==,type:str]
          secretName: traefik-forward-auth-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2022-12-31T08:28:55Z"
    mac: ENC[AES256_GCM,data:hiSJfqduixCpqfsWYp+ZvVKXNaQFwYXDPGCWzDm71RHgWDFt9FMjIYmV3a8RXryL+xeWnkhwxId6DaQi2ryYq8i+JWODSPx0Gpvc/upGZfxka8kyhy7uWvv3TM7DrRhHrStpvHf+4Oi+mPloYiaWrTsD9LL+XoYj336arraHzrU=,iv:HKQXRAVVcYUPDMlUBoxgqVaYSllytb0R4WLfpNs1iwQ=,tag:BdY+SYcXil3n3bAB35neUw==,type:str]
    pgp:
        - created_at: "2022-12-31T08:28:54Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA38T7Az157GMARAArQ+ujSJjQRn/lDQYjhN8KsYqcaIeoC/TQpjpJXzlDYBo
[...]
            =ALpA
            -----END PGP MESSAGE-----
          fp: 129994A38E40322EE2A4FA6CB59C51DA13B1BF22
    encrypted_regex: ^(host|hosts|client_id|client_secret|endpoint|random_secret)$
    version: 3.7.3
